--- a/package.json
+++ b/package.json
@@ -16,10 +16,12 @@
     "prompt": "^1.0.0"
   },
   "dependencies": {
+    "body-parser": "^1.18.3",
     "bookshelf": "^0.13.3",
     "bookshelf-bcrypt": "^3.0.2",
     "dotenv": "^6.1.0",
     "express": "^4.16.4",
+    "helmet": "^3.15.0",
     "knex": "^0.15.2",
     "mysql": "^2.16.0"
   }
